refactor(gui): 优化NodeLibraryComponent中的集合访问方法
- 将children.get(0)替换为children.getFirst()以提高代码可读性
- 统一使用getFirst()方法访问集合的第一个元素
- 保持原有的逻辑功能不变，仅优化方法调用方式